# patates

./: README.md  pyproject.toml
src/example_package_ybgirgin/: __init__.py  greet.py
